Remove unused endpoint of users service
