# users/openapi.json
@@ -133,36 +133,6 @@
         }
       }
     },
-    "/users/{id}": {
-      "get": {
-        "tags": [
-          "user-controller"
-        ],
-        "operationId": "getUser",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "*/*": {
-                "schema": {
-                  "$ref": "#/components/schemas/User"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/ping": {
       "get": {
         "tags": [
@@ -251,6 +221,10 @@
           },
           "repository": {
             "type": "string"
+          },
+          "created_at": {
+            "type": "string",
+            "format": "date-time"
           }
         }
       },
