# users/src/main/java/de/tum/users/controller/UserController.java
@@ -40,13 +40,6 @@ public class UserController {
                 .toList();
     }
 
-    @GetMapping("/users/{id}")
-    public User getUser(@PathVariable String id) {
-        return userRepository
-                .findById(id)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found with id: " + id));
-    }
-
     @GetMapping("/users/{id}/analysis")
     public List<Analysis> getUserAnalysis(@PathVariable String id) {
         var user = userRepository
